--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.cdnfonts.com/css/interstate-2');
 
 
 body{
   background-color: #F6F7F9;
+  font-family: 'Interstate', sans-serif;
+  font-family: 'InterstateMono', sans-serif;
+
 }
+
